fix selected pin not visible on mobile (#627)

--- a/client/src/components/searchResults.css
+++ b/client/src/components/searchResults.css
@@ -1,3 +1,16 @@
+.search-results-container {
+  background: #000;
+  color: #fff;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
+  height: 400px;
+  padding: 18px;
+  overflow-y: scroll;
+}
+
 .search-results {
   list-style-type: none;
   padding: 0;
@@ -6,6 +19,7 @@
 .search-results > li {
   padding: 0.45rem 1rem;
   cursor: pointer;
+  display: flex;
 }
 
 .search-results > li > p {
